--- a/AppSpan/app/src/main/res/layout/activity_main.xml
+++ b/AppSpan/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.appspan.appspan.MainActivity">
+    tools:context="com.appspan.appspan.MainActivity"
+    android:id="@+id/main_container">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/main_text"
+        android:text="main text!"
+        android:textSize="40dip">
+    </TextView>
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/apps_list">
+
+    </ListView>
 
 </android.support.constraint.ConstraintLayout>
