adapter, rendering apps stats

--- a/AppSpan/app/src/main/res/layout/row_layout.xml
+++ b/AppSpan/app/src/main/res/layout/row_layout.xml
@@ -1,16 +1,32 @@
 <LinearLayout
     android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:orientation="horizontal"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="5dp"/>
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:id="@+id/app_icon">
+    </ImageView>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id= "@+id/app_row"/>
+        android:id= "@+id/app_name_row"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id= "@+id/app_foreground_row"
+        android:textColor="@android:color/holo_purple"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id= "@+id/app_lastusage_row"/>
 
 </LinearLayout>
