--- a/AppSpan/app/src/main/res/layout/activity_main.xml
+++ b/AppSpan/app/src/main/res/layout/activity_main.xml
@@ -7,19 +7,50 @@
     tools:context="com.appspan.appspan.MainActivity"
     android:id="@+id/main_container">
 
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/main_text"
-        android:text="main text!"
-        android:textSize="40dip">
-    </TextView>
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button_day"
+                android:text="daily"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button_week"
+                android:text="weekly"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button_month"
+                android:text="monthly"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button_year"
+                android:text="yearly"/>
+        </LinearLayout>
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/apps_list">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/main_text"
+            android:text="main text!"
+            android:textSize="40dip">
+        </TextView>
 
-    </ListView>
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/apps_list">
+
+        </ListView>
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
