--- a/AppSpan/app/src/main/res/layout/row_layout.xml
+++ b/AppSpan/app/src/main/res/layout/row_layout.xml
@@ -7,26 +7,33 @@
     <ImageView
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:id="@+id/app_icon">
+        android:id="@+id/app_icon"
+        android:layout_marginLeft="10dip">
     </ImageView>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id= "@+id/app_name_row"/>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingLeft="25dip">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id= "@+id/app_foreground_row"
-        android:textColor="@android:color/holo_purple"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:textStyle="bold"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id= "@+id/app_name_row" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id= "@+id/app_lastusage_row"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id= "@+id/app_lastusage_row" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id= "@+id/app_foreground_row"
+            android:textStyle="bold"/>
+
+    </LinearLayout>
+
 
 </LinearLayout>
