--- a/AppSpan/app/src/main/res/values/colors.xml
+++ b/AppSpan/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#424242</color>
+    <color name="colorPrimaryDark">#212121</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorYellow">#FFB74D</color>
+    <color name="colorGreen">#81C784</color>
+    <color name="colorRed">#E57373</color>
+    <color name="colorBackground">#BDBDBD</color>
 </resources>
