--- a/AppSpan/app/src/main/res/layout/row_layout.xml
+++ b/AppSpan/app/src/main/res/layout/row_layout.xml
@@ -27,13 +27,37 @@
             android:layout_height="wrap_content"
             android:id= "@+id/app_lastusage_row" />
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id= "@+id/app_foreground_row"
-            android:textStyle="bold"/>
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_marginRight="5dp"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:id="@+id/app_dot">
+            </ImageView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id= "@+id/app_foreground_row"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id= "@+id/app_foreground_limit"
+                android:textStyle="bold"/>
+
+        </LinearLayout>
+
+
 
     </LinearLayout>
+
 
 
 </LinearLayout>
