--- a/AppSpan/app/src/main/res/layout/activity_main.xml
+++ b/AppSpan/app/src/main/res/layout/activity_main.xml
@@ -58,13 +58,13 @@
             android:layout_gravity="center">
         </TextView>
 
-        <TextView
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/main_empty"
-            android:textSize="20dip"
-            android:layout_gravity="center">
-        </TextView>
+            android:id="@+id/button_reload"
+            android:text="reload"
+            android:backgroundTint="@color/colorPrimary"
+            android:textColor="@android:color/white" />
 
         <ListView
             android:layout_width="match_parent"
