--- a/AppSpan/app/src/main/res/layout/activity_options.xml
+++ b/AppSpan/app/src/main/res/layout/activity_options.xml
@@ -2,19 +2,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_vertical"
     android:background="@color/colorBackground">
+
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:layout_gravity="center_horizontal">
+
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:id="@+id/options_icon"
+            android:layout_gravity="center">
+        </ImageView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/options_name"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:layout_gravity="center">
+        </TextView>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/options_current"
-            android:textSize="20dip"
-            android:layout_gravity="center">
+            android:textSize="20sp">
         </TextView>
 
     </LinearLayout>
@@ -24,6 +42,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/button_delete"
         android:text="delete"
+        android:layout_gravity="center"
         android:backgroundTint="@color/colorPrimary"
         android:textColor="@android:color/white"
         android:visibility="invisible"/>
@@ -31,13 +50,15 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:paddingTop="20sp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/options_msg"
-            android:textSize="20dip"
+            android:textSize="20sp"
             android:layout_gravity="center"
             android:text="New daily limit:">
         </TextView>
@@ -53,9 +74,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/options_minutes"
-            android:textSize="20dip"
+            android:textSize="20sp"
             android:layout_gravity="center"
-            android:text="minutes">
+            android:text=" minutes">
         </TextView>
 
     </LinearLayout>
